feat: Introduce Exposed migration plugin
- Migrate to Exposed 1.+
- Rename all packages to match Exposed 1.+ convention
- Migrate to TestContainers 2.+
- Bumo JDK to 17 and fix issues
- Adjust tests so that they are only run once (on H2) since not db-specific